minikube_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-app
spec:
  type: NodePort
  ports:
  - port: 80
    name: http-api
    protocol: TCP # The protocol the SERVICE will listen to
    targetPort: 8000 # Port to forward to in the POD
  selector:
    app: api-app
---
apiVersion: v1
kind: Service
metadata:
  name: client-app
spec:
  type: NodePort
  ports:
  - port: 80
    name: http-client
    protocol: TCP # The protocol the SERVICE will listen to
    targetPort: 3000 # Port to forward to in the POD
  selector:
    app: client-app
