minikube_ingress.yaml
---
apiVersion: networking.k8s.io/v1   
kind: Ingress
metadata:
  name: example-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  defaultBackend:
    service:
      name: client-app
      port:
        name: http-client
  rules:
    - host: hello-world.info # Which host is allowed to enter the cluster
      http:
        paths:
          - backend: # How the ingress will handle the requests
              service:
               name: client-app # Which service the request will be forwarded to
               port:
                 name: http-client # Which port in that service
            path: / # Which path is this rule referring to
            pathType: Prefix # See more at https://kubernetes.io/docs/concepts/services-networking/ingress/#path-types
          - backend: # How the ingress will handle the requests
              service:
               name: api-app # Which service the request will be forwarded to
               port:
                 name: http-api # Which port in that service
            path: /api(/|$)(.*) # Which path is this rule referring to
            pathType: Prefix # See more at https://kubernetes.io/docs/concepts/services-networking/ingress/#path-types
